--- a/gaming.html
+++ b/gaming.html
@@ -1080,6 +1080,7 @@
     </a>
   </div>
   <script src="js/libs.min.js"></script>
+  <script src="js/inputmask.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
