--- a/index.html
+++ b/index.html
@@ -1720,6 +1720,7 @@
 
 
     <script src="js/libs.min.js"></script>
+    <script src="js/inputmask.min.js"></script>
     <script src="js/main.js"></script>
   </div>
 </body>
