--- a/production.html
+++ b/production.html
@@ -899,6 +899,7 @@
   </div>
   <script src="js/libs.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+  <script src="js/inputmask.min.js"></script>
   <script src="js/main.js"></script>
   <script>
     $(function () {
